assignments/.svn/pristine/f6/f6e062a1add4880291dd95325395a5a90c1b1389.svn-base
MotorVehicle.cpp:4:17: error: expected namespace name
using namespace MotorVehicle;
                ^
1 error generated.
